WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110289
Fix TileCache tile size when zoomed on slow-scrolling site
https://bugs.webkit.org/show_bug.cgi?id=110289
Summary
Fix TileCache tile size when zoomed on slow-scrolling site
Simon Fraser (smfr)
Reported
2013-02-19 18:21:16 PST
Fix TileCache tile size when zoomed on slow-scrolling site
Attachments
Patch
(5.12 KB, patch)
2013-02-19 18:25 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-02-19 18:25:20 PST
Created
attachment 189219
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-02-19 18:26:24 PST
<
rdar://problem/13249960
>
Tim Horton
Comment 3
2013-02-19 18:27:13 PST
Comment on
attachment 189219
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=189219&action=review
> LayoutTests/platform/mac-wk2/tiled-drawing/tile-size-slow-zoomed.html:10 > + background-attachment: fixed; /* At this time, background-attachment:fixed forces slow mode. */
Not always!
Simon Fraser (smfr)
Comment 4
2013-02-19 18:30:36 PST
https://trac.webkit.org/r143423
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug