Fix TileCache tile size when zoomed on slow-scrolling site https://bugs.webkit.org/show_bug.cgi?id=110289

Source/WebCore:

Reviewed by Tim Horton.

In slow scrolling mode, we use the tile coverage rect as the tile size
(so a single tile covers the viewport). When zoomed, the tile coverage rect
shrinks relative to the TileCache, so scale the tile size back up.

Test: platform/mac-wk2/tiled-drawing/tile-size-slow-zoomed.html

* platform/graphics/ca/mac/TileCache.mm:
(WebCore::TileCache::tileSizeForCoverageRect):

LayoutTests:

Reviewed by Tim Horton.

Test that dumps tile coverage in a slow-scrolling, zoomed page.

* platform/mac-wk2/tiled-drawing/tile-size-slow-zoomed-expected.txt: Added.
* platform/mac-wk2/tiled-drawing/tile-size-slow-zoomed.html: Added.

Canonical link: https://commits.webkit.org/128604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143423 268f45cc-cd09-0410-ab3c-d52691b4dbfc